trunk/Archive2/ba/334ab19dc8ff7e/output
main.cpp: In function 'int main()':
main.cpp:34:25: error: no matching function for call to 'account::deposit()'
      cin << jam.deposit()<<   '\n';
                         ^
main.cpp:34:25: note: candidate is:
main.cpp:19:10: note: void account::deposit(double)
     void deposit (double amount) { 
          ^
main.cpp:19:10: note:   candidate expects 1 argument, 0 provided
